--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,9 +25,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pyinstaller yt-dlp
-        
-    - name: Build executable
+
+    - name: Build executable (Windows)
+      if: matrix.os == 'windows-latest'
       run: pyinstaller --onefile --windowed --name ynot main.py
+
+    - name: Build executable (macOS)
+      if: matrix.os == 'macos-latest'
+      run: pyinstaller --onefile --name ynot main.py
         
     - name: Create Release
       uses: softprops/action-gh-release@v1
