--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
         security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k temppass build.keychain
 
         # Build and sign
-        pyinstaller --onefile --windowed --name YNOT --clean main.py
+        pyinstaller --onefile --windowed --name YNOT --clean --icon icon.icns main.py
         codesign --force --options runtime --entitlements entitlements.plist --sign "Developer ID Application" "dist/YNOT.app"
         ditto -c -k --keepParent "dist/YNOT.app" dist/YNOT.zip
         xcrun notarytool submit dist/YNOT.zip --apple-id ${{ secrets.APPLE_ID }} --password ${{ secrets.APPLE_PASSWORD }} --team-id ${{ secrets.APPLE_TEAM_ID }} --wait
